@@ -2512,6 +2512,11 @@ argument_list|()
 decl_stmt|;
 name|calendar
 operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|calendar
+operator|.
 name|set
 argument_list|(
 name|year
@@ -2519,6 +2524,50 @@ argument_list|,
 name|month
 argument_list|,
 name|day
+argument_list|)
+expr_stmt|;
+name|calendar
+operator|.
+name|set
+argument_list|(
+name|Calendar
+operator|.
+name|HOUR_OF_DAY
+argument_list|,
+literal|23
+argument_list|)
+expr_stmt|;
+name|calendar
+operator|.
+name|set
+argument_list|(
+name|Calendar
+operator|.
+name|MINUTE
+argument_list|,
+literal|59
+argument_list|)
+expr_stmt|;
+name|calendar
+operator|.
+name|set
+argument_list|(
+name|Calendar
+operator|.
+name|SECOND
+argument_list|,
+literal|59
+argument_list|)
+expr_stmt|;
+name|calendar
+operator|.
+name|set
+argument_list|(
+name|Calendar
+operator|.
+name|MILLISECOND
+argument_list|,
+literal|999
 argument_list|)
 expr_stmt|;
 return|return
