@@ -4048,9 +4048,6 @@ name|month
 parameter_list|,
 name|int
 name|day
-parameter_list|,
-name|boolean
-name|extendLastDate
 parameter_list|)
 block|{
 name|DateFormat
@@ -4074,6 +4071,11 @@ argument_list|()
 decl_stmt|;
 name|calendar
 operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|calendar
+operator|.
 name|set
 argument_list|(
 name|year
@@ -4083,11 +4085,6 @@ argument_list|,
 name|day
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|extendLastDate
-condition|)
-block|{
 name|calendar
 operator|.
 name|set
@@ -4132,7 +4129,6 @@ argument_list|,
 literal|999
 argument_list|)
 expr_stmt|;
-block|}
 return|return
 name|df
 operator|.
@@ -4164,8 +4160,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|1
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|String
@@ -4178,8 +4172,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|4
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|Calendar
@@ -4189,6 +4181,11 @@ operator|new
 name|GregorianCalendar
 argument_list|()
 decl_stmt|;
+name|endDateExpected
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 name|endDateExpected
 operator|.
 name|set
@@ -4315,8 +4312,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|1
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|String
@@ -4329,8 +4324,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|4
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|Calendar
@@ -4340,6 +4333,11 @@ operator|new
 name|GregorianCalendar
 argument_list|()
 decl_stmt|;
+name|endDateExpected
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 name|endDateExpected
 operator|.
 name|set
