@@ -3973,9 +3973,6 @@ name|month
 parameter_list|,
 name|int
 name|day
-parameter_list|,
-name|boolean
-name|extendLastDate
 parameter_list|)
 block|{
 name|DateFormat
@@ -3999,6 +3996,11 @@ argument_list|()
 decl_stmt|;
 name|calendar
 operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|calendar
+operator|.
 name|set
 argument_list|(
 name|year
@@ -4008,11 +4010,6 @@ argument_list|,
 name|day
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|extendLastDate
-condition|)
-block|{
 name|calendar
 operator|.
 name|set
@@ -4057,7 +4054,6 @@ argument_list|,
 literal|999
 argument_list|)
 expr_stmt|;
-block|}
 return|return
 name|df
 operator|.
@@ -4089,8 +4085,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|1
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|String
@@ -4103,8 +4097,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|4
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|Calendar
@@ -4114,6 +4106,11 @@ operator|new
 name|GregorianCalendar
 argument_list|()
 decl_stmt|;
+name|endDateExpected
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 name|endDateExpected
 operator|.
 name|set
@@ -4240,8 +4237,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|1
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|String
@@ -4254,8 +4249,6 @@ argument_list|,
 literal|1
 argument_list|,
 literal|4
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|Calendar
@@ -4265,6 +4258,11 @@ operator|new
 name|GregorianCalendar
 argument_list|()
 decl_stmt|;
+name|endDateExpected
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 name|endDateExpected
 operator|.
 name|set
